--- a/publications.html
+++ b/publications.html
@@ -2181,12 +2181,16 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     --mono-font:       monospace;
     --body-font:       "Lato", sans-serif;
     --navbar-font:     "Lato", sans-serif;  /* websites + blogs only */
-    --webkit-font-smoothing: antialiased;
-    --moz-osx-font-smoothing: grayscale;
   }
 
 
-
+  body {
+    color: rgba(51, 51, 51, 1);
+    webkit-font-smoothing: antialiased;
+    moz-osx-font-smoothing: grayscale;
+  }
+    
+    
   /*-- ARTICLE METADATA --*/
   d-byline {
     --heading-size:    0.6rem;
