--- a/publications.html
+++ b/publications.html
@@ -2183,11 +2183,10 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
     --navbar-font:     "Lato", sans-serif;  /* websites + blogs only */
   }
 
-
   body {
     color: rgba(51, 51, 51, 1);
-    webkit-font-smoothing: antialiased;
-    moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
     
     
