--- a/index.html
+++ b/index.html
@@ -747,11 +747,10 @@
             --navbar-font:     "Lato", sans-serif;  /* websites + blogs only */
           }
 
-
           body {
             color: rgba(51, 51, 51, 1);
-            webkit-font-smoothing: antialiased;
-            moz-osx-font-smoothing: grayscale;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
           }
             
             
