--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
             <div class="p-2 top-marg">
               <h2>Tom Hardwicke</h2>
               <h4>Research Fellow</h4>
-              <h4>University of Melbourne</h4>
+              <h4>University of Amsterdam</h4>
             </div>
             <hr style="width:60%;"/>
             <div class="p-2">
@@ -1468,7 +1468,7 @@
             <div class="p-2 text-center top-marg">
               <h2>Tom Hardwicke</h2>
               <h4>Research Fellow</h4>
-              <h4>University of Melbourne</h4>
+              <h4>University of Amsterdam</h4>
             </div>
             <hr style="width:60%;"/>
 
