new paper published

--- a/index.html
+++ b/index.html
@@ -1112,16 +1112,18 @@
             <h4>2022</h4>
             <p>Hardwicke, T. E., Thibault, R. T., Kosie, J. E.,
             Tzavella, L., Bendixen, T., Handcock, S. A. Köneke, V. E.,
-            Ioannidis, J. P. A. (in press). Post-publication critique at
+            Ioannidis, J. P. A. (2022). Post-publication critique at
             top-ranked journals across scientific disciplines: A
             cross-sectional assessment of policies and practice.
-            <em>Royal Society Open Science</em>.<br />
+            <em>Royal Society Open Science</em>, <em>9</em>,
+            220139.<br />
+            <a href="https://dx.doi.org/10.1098/rsos.220139">[paper]</a>
             <a href="https://doi.org/hc7d">[preprint]</a> <a
             href="https://osf.io/hjvnw/">[preregistration]</a> <a
             href="https://osf.io/8b6jy/">[data]</a> <a
             href="https://osf.io/8b6jy/">[materials]</a> <a
             href="https://osf.io/8b6jy/">[analysis-code]</a> <a
-            href="https://doi.org/10.24433/CO.3805142.v1">[reproducible-container]</a></p>
+            href="https://doi.org/10.24433/CO.3805142.v2">[reproducible-container]</a></p>
             <p>TARG Meta-Research Group &amp; Collaborators [Thibault,
             R. T., Hardwicke, T. E., Clark, R. W. A., Pennington, C. R.,
             Nilsonne, G., O’Mahony, A., Drax, K., Thompson, J., Munafò,
@@ -1555,16 +1557,19 @@
               <h4>2022</h4>
               <p>Hardwicke, T. E., Thibault, R. T., Kosie, J. E.,
               Tzavella, L., Bendixen, T., Handcock, S. A. Köneke, V. E.,
-              Ioannidis, J. P. A. (in press). Post-publication critique
-              at top-ranked journals across scientific disciplines: A
+              Ioannidis, J. P. A. (2022). Post-publication critique at
+              top-ranked journals across scientific disciplines: A
               cross-sectional assessment of policies and practice.
-              <em>Royal Society Open Science</em>.<br />
+              <em>Royal Society Open Science</em>, <em>9</em>,
+              220139.<br />
+              <a
+              href="https://dx.doi.org/10.1098/rsos.220139">[paper]</a>
               <a href="https://doi.org/hc7d">[preprint]</a> <a
               href="https://osf.io/hjvnw/">[preregistration]</a> <a
               href="https://osf.io/8b6jy/">[data]</a> <a
               href="https://osf.io/8b6jy/">[materials]</a> <a
               href="https://osf.io/8b6jy/">[analysis-code]</a> <a
-              href="https://doi.org/10.24433/CO.3805142.v1">[reproducible-container]</a></p>
+              href="https://doi.org/10.24433/CO.3805142.v2">[reproducible-container]</a></p>
               <p>TARG Meta-Research Group &amp; Collaborators [Thibault,
               R. T., Hardwicke, T. E., Clark, R. W. A., Pennington, C.
               R., Nilsonne, G., O’Mahony, A., Drax, K., Thompson, J.,
