--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,11 @@
             href="https://osf.io/8b6jy/">[data]</a> <a
             href="https://osf.io/8b6jy/">[materials]</a> <a
             href="https://osf.io/8b6jy/">[analysis-code]</a> <a
-            href="https://doi.org/10.24433/CO.3805142.v2">[reproducible-container]</a></p>
+            href="https://doi.org/10.24433/CO.3805142.v2">[reproducible-container]</a>
+            <a
+            href="https://www.science.org/content/article/news-glance-new-gene-therapy-europe-s-drought-and-black-hole-s-photon-ring">[media1]</a>
+            <a
+            href="https://www.timeshighereducation.com/news/worlds-top-journals-limiting-critiques">[media2]</a></p>
             <p>TARG Meta-Research Group &amp; Collaborators [Thibault,
             R. T., Hardwicke, T. E., Clark, R. W. A., Pennington, C. R.,
             Nilsonne, G., O’Mahony, A., Drax, K., Thompson, J., Munafò,
@@ -1569,7 +1573,11 @@
               href="https://osf.io/8b6jy/">[data]</a> <a
               href="https://osf.io/8b6jy/">[materials]</a> <a
               href="https://osf.io/8b6jy/">[analysis-code]</a> <a
-              href="https://doi.org/10.24433/CO.3805142.v2">[reproducible-container]</a></p>
+              href="https://doi.org/10.24433/CO.3805142.v2">[reproducible-container]</a>
+              <a
+              href="https://www.science.org/content/article/news-glance-new-gene-therapy-europe-s-drought-and-black-hole-s-photon-ring">[media1]</a>
+              <a
+              href="https://www.timeshighereducation.com/news/worlds-top-journals-limiting-critiques">[media2]</a></p>
               <p>TARG Meta-Research Group &amp; Collaborators [Thibault,
               R. T., Hardwicke, T. E., Clark, R. W. A., Pennington, C.
               R., Nilsonne, G., O’Mahony, A., Drax, K., Thompson, J.,
