--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
             <div class="p-2 top-marg">
               <h2>Tom Hardwicke</h2>
               <h4>Research Fellow</h4>
-              <h4>University of Amsterdam</h4>
+              <h4>University of Melbourne</h4>
             </div>
             <hr style="width:60%;"/>
             <div class="p-2">
@@ -1127,7 +1127,9 @@
             <a
             href="https://www.science.org/content/article/news-glance-new-gene-therapy-europe-s-drought-and-black-hole-s-photon-ring">[media1]</a>
             <a
-            href="https://www.timeshighereducation.com/news/worlds-top-journals-limiting-critiques">[media2]</a></p>
+            href="https://www.timeshighereducation.com/news/worlds-top-journals-limiting-critiques">[media2]</a>
+            <a
+            href="https://www.science.org/content/article/you-ve-spotted-flaw-top-journal-s-paper-good-luck-getting-your-critique-published">[media3]</a></p>
             <p>TARG Meta-Research Group &amp; Collaborators [Thibault,
             R. T., Hardwicke, T. E., Clark, R. W. A., Pennington, C. R.,
             Nilsonne, G., O’Mahony, A., Drax, K., Thompson, J., Munafò,
@@ -1477,7 +1479,7 @@
             <div class="p-2 text-center top-marg">
               <h2>Tom Hardwicke</h2>
               <h4>Research Fellow</h4>
-              <h4>University of Amsterdam</h4>
+              <h4>University of Melbourne</h4>
             </div>
             <hr style="width:60%;"/>
 
@@ -1577,7 +1579,9 @@
               <a
               href="https://www.science.org/content/article/news-glance-new-gene-therapy-europe-s-drought-and-black-hole-s-photon-ring">[media1]</a>
               <a
-              href="https://www.timeshighereducation.com/news/worlds-top-journals-limiting-critiques">[media2]</a></p>
+              href="https://www.timeshighereducation.com/news/worlds-top-journals-limiting-critiques">[media2]</a>
+              <a
+              href="https://www.science.org/content/article/you-ve-spotted-flaw-top-journal-s-paper-good-luck-getting-your-critique-published">[media3]</a></p>
               <p>TARG Meta-Research Group &amp; Collaborators [Thibault,
               R. T., Hardwicke, T. E., Clark, R. W. A., Pennington, C.
               R., Nilsonne, G., O’Mahony, A., Drax, K., Thompson, J.,
